# rustinator

./: .gitignore  Cargo.toml  README.md  perf.sh
src/: board.rs  board_info.rs  eval.rs  main.rs  move_ordering.rs  movegen.rs  moves.rs  opening_book.rs  perft.rs  search.rs  search_mt.rs  transposition_table.rs  uci.rs
src/chess/: board.rs  mod.rs  movegen.rs  moves.rs
src/search/: eval.rs  mod.rs  perft.rs  search.rs  transposition_table.rs
src/uci/: mod.rs  opening_book.rs  uci.rs
