[package]
name = "rustinator"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[profile.dev-ovflw]
inherits = "dev"
overflow-checks = true

[dependencies]
threadpool = "1.8.1"
rand = "0.8.4"