[package]
name = "rustinator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# debug = 1
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = true

[profile.dev-ovflw]
inherits = "dev"
overflow-checks = true

[dependencies]
rand = "0.8.4"